--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -1,5 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,23 +8,20 @@
   font-family: "Poppins", sans-serif;
 }
 
+button {
+  cursor: pointer;
+}
+
 /*Nav-bar*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-nav{
+nav {
   position: fixed;
   z-index: 99;
   width: 100%;
-  
+
   background: #242526;
 }
-nav .wrapper{
+nav .wrapper {
   position: relative;
   max-width: 1300px;
   padding: 0px 30px;
@@ -34,58 +32,57 @@ nav .wrapper{
   align-items: center;
   justify-content: space-between;
 }
-.wrapper .logo a{
-  color: #f2f2f2;
-  font-size: 30px;
-  font-weight: 600;
-  text-decoration: none;
+.wrapper img,
+.logo {
+  height: 80px;
 }
-.wrapper .nav-links{
+.wrapper .nav-links {
   display: inline-flex;
 }
-.nav-links li{
+.nav-links li {
   list-style: none;
 }
-.nav-links li a{
+.nav-links li a {
   color: #f2f2f2;
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
-  padding: 9px 15px;
+  padding: 9px 30px;
   border-radius: 5px;
   transition: all 0.3s ease;
 }
-.nav-links li a:hover{
+.nav-links li a:hover {
   color: #d6a230;
 }
-.nav-links .mobile-item{
+.nav-links .mobile-item {
   display: none;
 }
-.nav-links .drop-menu{
+.nav-links .drop-menu {
   position: absolute;
   background: #242526;
-  width: 180px;
+  width: 230px;
   line-height: 45px;
+  text-align: center;
   top: 85px;
   opacity: 0;
   visibility: hidden;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 .nav-links li:hover .drop-menu,
-.nav-links li:hover .mega-box{
+.nav-links li:hover .mega-box {
   transition: all 0.3s ease;
   top: 70px;
   opacity: 1;
   visibility: visible;
 }
-.drop-menu li a{
+.drop-menu li a {
   width: 100%;
   display: block;
-  padding: 0 0 0 15px;
+margin: 3px;
   font-weight: 400;
   border-radius: 0px;
 }
-.mega-box{
+.mega-box {
   position: absolute;
   left: 0;
   width: 100%;
@@ -94,63 +91,70 @@ nav .wrapper{
   opacity: 0;
   visibility: hidden;
 }
-.mega-box .content{
+.mega-box .content {
   background: #242526;
   padding: 25px 20px;
   display: flex;
   width: 100%;
   justify-content: space-between;
-  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
-.mega-box .content .row{
+.mega-box .content .row {
   width: calc(25% - 30px);
   line-height: 45px;
 }
-.content .row img{
+.content .row img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.content .row header{
+.content .row header {
   color: #f2f2f2;
   font-size: 20px;
   font-weight: 500;
 }
-.content .row .mega-links{
+.content .row .mega-links {
   margin-left: -40px;
-  border-left: 1px solid rgba(255,255,255,0.09);
+  border-left: 1px solid rgba(255, 255, 255, 0.09);
 }
-.row .mega-links li{
+.row .mega-links li {
   padding: 0 20px;
 }
-.row .mega-links li a{
+.row .mega-links li a {
   padding: 0px;
   padding: 0 20px;
   color: #d9d9d9;
   font-size: 17px;
   display: block;
 }
-.row .mega-links li a:hover{
-  color:  #d6a230;
-  ;
+.row .mega-links li a:hover {
+  color: #d6a230;
 }
-.wrapper .btn{
+.wrapper .btn {
   color: #fff;
   font-size: 20px;
   cursor: pointer;
   display: none;
 }
-.wrapper .btn.close-btn{
+.wrapper .btn.close-btn {
   position: absolute;
   right: 30px;
   top: 10px;
 }
 
+.menu-cell {
+  display: none;
+}
+
+.section i{
+  font-size: 20px;
+}
+
 @media screen and (max-width: 970px) {
-  .wrapper .btn{
+  .wrapper .btn {
     display: block;
   }
-  .wrapper .nav-links{
+  .wrapper .nav-links {
     position: fixed;
     height: 100vh;
     width: 100%;
@@ -162,10 +166,16 @@ nav .wrapper{
     padding: 50px 10px;
     line-height: 50px;
     overflow-y: auto;
-    box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
     transition: all 0.3s ease;
   }
+
+  .menu-cell {
+    display: block;
+  }
+
   /* custom scroll bar */
+
   ::-webkit-scrollbar {
     width: 10px;
   }
@@ -173,26 +183,27 @@ nav .wrapper{
     background: #242526;
   }
   ::-webkit-scrollbar-thumb {
-    background: #3A3B3C;
+    background: #3a3b3c;
   }
-  #menu-btn:checked ~ .nav-links{
+  #menu-btn:checked ~ .nav-links {
     left: 0%;
   }
-  #menu-btn:checked ~ .btn.menu-btn{
+  #menu-btn:checked ~ .btn.menu-btn {
     display: none;
   }
-  #close-btn:checked ~ .btn.menu-btn{
+  #close-btn:checked ~ .btn.menu-btn {
     display: block;
   }
-  .nav-links li{
+  .nav-links li {
     margin: 15px 10px;
   }
-  .nav-links li a{
+  .nav-links li a,
+  section .nav-liks li a {
     padding: 0 20px;
     display: block;
     font-size: 20px;
   }
-  .nav-links .drop-menu{
+  .nav-links .drop-menu {
     position: static;
     opacity: 1;
     top: 65px;
@@ -205,13 +216,13 @@ nav .wrapper{
     transition: all 0.3s ease;
   }
   #showDrop:checked ~ .drop-menu,
-  #showMega:checked ~ .mega-box{
+  #showMega:checked ~ .mega-box {
     max-height: 100%;
   }
-  .nav-links .desktop-item{
+  .nav-links .desktop-item {
     display: none;
   }
-  .nav-links .mobile-item{
+  .nav-links .mobile-item {
     display: block;
     color: #f2f2f2;
     font-size: 20px;
@@ -221,17 +232,17 @@ nav .wrapper{
     border-radius: 5px;
     transition: all 0.3s ease;
   }
-  .nav-links .mobile-item:hover{
+  .nav-links .mobile-item:hover {
     color: #d6a230;
   }
-  .drop-menu li{
+  .drop-menu li {
     margin: 0;
   }
-  .drop-menu li a{
+  .drop-menu li a {
     border-radius: 5px;
     font-size: 18px;
   }
-  .mega-box{
+  .mega-box {
     position: static;
     top: 65px;
     opacity: 1;
@@ -241,36 +252,36 @@ nav .wrapper{
     overflow: hidden;
     transition: all 0.3s ease;
   }
-  .mega-box .content{
+  .mega-box .content {
     box-shadow: none;
     flex-direction: column;
     padding: 20px 20px 0 20px;
   }
-  .mega-box .content .row{
+  .mega-box .content .row {
     width: 100%;
     margin-bottom: 15px;
-    border-top: 1px solid rgba(255,255,255,0.08);
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
   }
   .mega-box .content .row:nth-child(1),
-  .mega-box .content .row:nth-child(2){
+  .mega-box .content .row:nth-child(2) {
     border-top: 0px;
   }
-  .content .row .mega-links{
+  .content .row .mega-links {
     border-left: 0px;
     padding-left: 15px;
   }
-  .row .mega-links li{
+  .row .mega-links li {
     margin: 0;
   }
-  .content .row header{
+  .content .row header {
     font-size: 19px;
   }
 }
-nav input{
+nav input {
   display: none;
 }
 
-.body-text{
+.body-text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -279,10 +290,11 @@ nav input{
   text-align: center;
   padding: 0 30px;
 }
-.body-text div{
+.body-text div {
   font-size: 45px;
   font-weight: 600;
 }
+
 /*cover*/
 
 .main {
@@ -318,53 +330,83 @@ nav input{
   transition: all 0.3s ease;
 }
 
+/*Sezione principale*/
+
+.contenuto {
+  margin: 20px 35px;
+}
+
 /*categoria prodotti*/
+
+.container-categorie {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+  width: 100%;
+  margin: auto;
+  padding-bottom: 30px;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+  filter: brightness(70%);
+  transform: scale(1.05);
+}
+
+.card {
+  position: relative;
+}
+
+.card h3 {
+  position: absolute;
+  color: white;
+  font-size: calc(0.5em + 2.5vw);
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin: 0;
+  padding: 5px 10px;
+  font-weight: normal;
+}
+
+.container-foto {
+  overflow: hidden;
+  height: 100%;
+}
+.container-foto img:hover {
+  filter: brightness(100%);
+  transform: scale(1.3);
+}
+
+/*prodotti*/
 
 article h2 {
   font-weight: normal;
   font-size: 30px;
   text-align: center;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
-.container-categorie a {
-  color: black;
-  text-decoration: none;
-}
-.container-categorie {
+article .all-products {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  text-align: center;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
-.categoria-prodotto img {
-  height: 300px;
-  margin-top: 10px;
-  overflow: hidden;
-  transition: 0.3s ease-in-out;
+.all-products a {
+  color: #0c0c0c;
+  transition: all 0.3s ease;
+  padding: 40px 0 30px;
+  font-size: 20px;
 }
 
-.container-foto {
-  overflow: hidden;
+.all-products a:hover {
+  color: #df9f16;
+  text-decoration: underline;
 }
-.categoria-prodotto img:hover {
-  opacity: 0.6;
-  filter: alpha(opacity=30);
-  transform: scale(1.3);
-}
-
-@media (max-width: 700px) {
-  .categoria-prodotto img {
-    height: 500px;
-  }
-  .categoria-prodotto h3 {
-    font-size: 30px;
-    font-weight: normal;
-  }
-}
-
-/*prodotti*/
 
 .container-prodotti {
   text-align: center;
@@ -381,13 +423,14 @@ article h2 {
   width: 200px;
   height: 200px;
   object-fit: contain;
+  margin-bottom: 10px;
 }
 
 .prodotti {
   width: 300px;
   height: 350px;
   padding: 10px 10px;
-  margin: 15px 10px;
+  margin: 30px 20px;
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
   transition: all 0.3s ease;
 }
@@ -427,6 +470,7 @@ article h2 {
   font-weight: bold;
   background-color: #1e1e1f;
   color: white;
+  transition: all 0.3s ease;
 }
 
 .compra button:hover,
@@ -444,7 +488,8 @@ article h2 {
   text-align: center;
   background-image: url(img/Banner.png);
   width: 100%;
-  height: 40vh;
+  height: 70vh;
+  margin: 30px 0;
   background-size: cover;
   background-position: top;
   color: white;
@@ -455,7 +500,7 @@ article h2 {
 }
 .banner h3 {
   font-size: 30px;
-  padding: 15px 0;
+  padding: 15px 0 40px;
 }
 
 .banner h3 span {
@@ -475,12 +520,28 @@ article h2 {
   transition: all 0.3s ease;
 }
 
+.container-linea {
+  display: flex;
+  align-items: center;
+  margin: 40px 0 70px;
+}
+
+.linea {
+  flex-grow: 1;
+  height: 2px;
+  background-color: black;
+}
+
+.testo {
+  padding: 0 40px;
+}
+
 /*Form*/
 
 .container-form {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  margin: 70px 0;
 }
 
 .container-form form {
@@ -516,14 +577,178 @@ article h2 {
   border: 1px solid #929292;
 }
 
-.img-form{
- height: 50px;
- width: 50px;
+.img-form {
+  height: 50px;
+  width: 50px;
 }
-.submit-button{
+.submit-button {
   display: flex;
 }
 
-#conferma{
+#conferma {
   margin-bottom: 10px;
+}
+
+/*Media query*/
+
+@media (max-width: 500px) {
+  .prodotti img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .container-foto {
+    height: 100%;
+  }
+
+  .main h1 {
+    font-size: 30px;
+  }
+
+  .prodotti {
+    width: 250px;
+    height: 350px;
+    margin: 10px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .container-foto {
+    height: 40vh;
+  }
+  .card h3 {
+    font-size: calc(2em + 4.5vw);
+    font-weight: normal;
+    top: calc(30% - 2vh);
+    left: 50%;
+  }
+
+  .container-categorie {
+    grid-template-columns: 1fr;
+  }
+
+  .linea {
+    display: none;
+  }
+
+  .container-linea {
+    justify-content: center;
+  }
+
+  .container-linea h2 {
+    font-size: 25px;
+  }
+
+  .container-linea {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
+/* Footer */
+
+footer {
+  width: 100%;
+  background: #242526;
+  padding: 20px;
+  padding-top: 40px;
+}
+
+.contenitore-footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-left: 60px;
+  font-size: 15px;
+}
+
+.sezione-secondo-footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  margin: 20px 30px;
+  font-size: 12px;
+}
+
+.sezione-footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sezione-footer h4 {
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.sezione-footer i {
+  display: none;
+  color:white;
+}
+
+.drop-down-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sezione-footer li,
+.sezione-secondo-footer p,
+.sezione-secondo-footer i {
+  margin: 20px 0;
+  color: white;
+}
+
+.sezione-footer li span {
+  color: rgb(173, 173, 173);
+  font-size: 13px;
+  font-weight: light;
+}
+
+hr {
+  display: none;
+}
+
+.social {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 40px;
+}
+
+.social i {
+  margin-right: 50px;
+}
+
+@media (max-width: 1100px) {
+  .contenitore-footer {
+    grid-template-columns: 1fr;
+  }
+  .contenitore-footer {
+    margin-right: 60px;
+  }
+  hr {
+    display: block;
+    width: 100%;
+    margin:20px 0;
+  }
+  .sezione-footer ul {
+    display: none;
+  }
+   ul.open {
+    display: block;
+  }
+  .rotate{
+    transform: rotate(180deg);
+  }
+  .sezione-footer i {
+    display: block;
+  }
+
+  .sezione-secondo-footer {
+    grid-template-columns: 1fr;
+  }
+
+  .social {
+    display: block;
+    margin-top: 30px;
+  }
 }
