--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -54,19 +54,25 @@ nav .wrapper {
 .nav-links li a:hover {
   color: #d6a230;
 }
+
+.nav-links li {
+  color: white;
+}
+
 .nav-links .mobile-item {
   display: none;
 }
 .nav-links .drop-menu {
   position: absolute;
   background: #242526;
-  width: 230px;
+  width: 250px;
   line-height: 45px;
   text-align: center;
   top: 85px;
   opacity: 0;
   visibility: hidden;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  padding: 15px;
 }
 .nav-links li:hover .drop-menu,
 .nav-links li:hover .mega-box {
@@ -78,9 +84,13 @@ nav .wrapper {
 .drop-menu li a {
   width: 100%;
   display: block;
-margin: 3px;
+  margin: 3px;
   font-weight: 400;
   border-radius: 0px;
+}
+
+.drop-menu span {
+  color: white;
 }
 .mega-box {
   position: absolute;
@@ -146,7 +156,7 @@ margin: 3px;
   display: none;
 }
 
-.section i{
+.section i {
   font-size: 20px;
 }
 
@@ -295,6 +305,104 @@ nav input {
   font-weight: 600;
 }
 
+/*Side bar login*/
+
+.form-laterale h2 {
+  font-weight: bold;
+  margin: 0;
+  font-size: 30px;
+}
+
+.form-laterale form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form .fas{
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.form-laterale {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 50px 50px;
+  width: 400px;
+  height: 100vh;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  right: -500px;
+  z-index: 99;
+visibility: hidden;
+display: none;
+transition: all 0.3s ease;}
+
+.open{
+right: 0;
+}
+
+.form-laterale hr {
+  width: 100%;
+  margin: 20px 0;
+}
+.form-laterale input {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.form-laterale span {
+  font-size: 13px;
+}
+
+.social-container {
+  margin: 20px 0;
+  display: inline;
+}
+
+.fb:hover {
+  color: rgb(42, 44, 161);
+}
+.google:hover {
+  color: rgb(212, 46, 24);
+}
+.linkedin:hover {
+  color: rgb(49, 51, 209);
+}
+
+.social-container a {
+  color: #333;
+  padding: 10px;
+  font-size: 17px;
+  text-decoration: none;
+  margin: 20px 0;
+}
+
+.form-laterale button {
+  padding: 8px 40px;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  background-color: #1e1e1f;
+  color: white;
+  transition: all 0.3s ease;
+}
+
+.no-account p,
+form a {
+  margin: 20px 0;
+}
+
 /*cover*/
 
 .main {
@@ -317,14 +425,16 @@ nav input {
   font-weight: normal;
 }
 
-.main button {
+.main button,
+.nav-links button {
   padding: 10px 20px;
   border-radius: 10px;
   border: none;
   font-weight: bold;
 }
 
-.main button:hover {
+.main button:hover,
+.nav-links button:hover {
   background-color: #1e1e1f;
   color: white;
   transition: all 0.3s ease;
@@ -682,7 +792,7 @@ footer {
 
 .sezione-footer i {
   display: none;
-  color:white;
+  color: white;
 }
 
 .drop-down-footer {
@@ -704,7 +814,7 @@ footer {
   font-weight: light;
 }
 
-hr {
+.division-footer {
   display: none;
 }
 
@@ -725,18 +835,18 @@ hr {
   .contenitore-footer {
     margin-right: 60px;
   }
-  hr {
+  .division-footer {
     display: block;
     width: 100%;
-    margin:20px 0;
+    margin: 20px 0;
   }
   .sezione-footer ul {
     display: none;
   }
-   ul.open {
+  ul.open {
     display: block;
   }
-  .rotate{
+  .rotate {
     transform: rotate(180deg);
   }
   .sezione-footer i {
